chore: address code smells (#73)